Added auto saving to pages and started handling flash messages

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -25,7 +25,9 @@ body {
 
 @import "../../node_modules/flatpickr/dist/flatpickr.min.css";
 @import "../../node_modules/trix/dist/trix.css";
+@import "../../node_modules/notyf/notyf.min.css";
 
+@import "helpers";
 @import "variables/sizes";
 
 @import "layout";
