--- a/src/css/components/_page.scss
+++ b/src/css/components/_page.scss
@@ -1,9 +1,18 @@
 .page {
+  height: 100%;
+  box-sizing: border-box;
   flex: 1;
-  padding: $size-page-padding 1rem;
+  padding: $size-page-padding 1rem 0 1rem;
   margin: 0 auto;
   max-width: 60%;
   color: $colour-black;
+  overflow-y: auto;
+
+  form {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
 
   .header {
     border-bottom: 1px solid $colour-border-grey;
