--- a/src/css/components/_pages.scss
+++ b/src/css/components/_pages.scss
@@ -26,6 +26,13 @@
       display: block;
     }
 
+    &.month-seperator {
+      background: $colour-border-grey;
+      font-weight: bold;
+      padding: .25rem 1rem;
+      font-size: 75%;
+    }
+
     .name {
       font-weight: bold;
       margin-bottom: .5rem;
