--- a/src/css/components/_inputs.scss
+++ b/src/css/components/_inputs.scss
@@ -2,7 +2,7 @@ label, input, textarea {
   display: block;
 }
 
-input, textarea {
+.page input, .page textarea {
   border: none;
   padding: 1rem;
 
