--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -36,16 +36,25 @@ header {
   flex-direction: row;
   align-items: stretch;
   cursor: pointer;
-  
+
+  $profile-line-height: calc(#{$size-header-height} - (#{$size-header-padding} * 2));
+
+  &> * {
+    line-height: $profile-line-height;
+    margin-right: 1rem;
+  }
+
   .name {
     color: $colour-grey;
-    line-height: calc(#{$size-header-height} - (#{$size-header-padding} * 2));
-    margin-right: 1rem;
   }
 
   .icon {
     background: grey;
     border-radius: 100%;
-    width: calc(#{$size-header-height} - (#{$size-header-padding} * 2));
+    width: $profile-line-height;
+  }
+
+  .logout {
+    margin-right: 0;
   }
 }
