Added basic styling for simple pages

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -32,6 +32,7 @@ body {
 @import "variables/colours";
 
 @import "layout";
+@import "components/layout_center";
 
 @import "components/inputs";
 @import "components/buttons";
