--- a/src/css/components/_buttons.scss
+++ b/src/css/components/_buttons.scss
@@ -1,7 +1,8 @@
 .btn {
+  display: inline-block;
   border: 1px solid $colour-border-grey;
   border-radius: 10px;
-  padding: 0 1.5rem;
+  padding: .5rem 1.5rem;
   text-decoration: none;
   background: none;
   font-weight: bold;
@@ -23,4 +24,9 @@
   &:hover {
     background: lighten($colour-primary, 10)
   }
+}
+
+.btn-header {
+  line-height: calc(#{$size-header-height} - (#{$size-header-padding} * 2));
+  padding: 0 1.5rem;
 }
