--- a/src/css/components/_layout_center.scss
+++ b/src/css/components/_layout_center.scss
@@ -4,4 +4,8 @@
   margin: 0 auto;
   margin-top: $size-page-padding;
   padding: $size-page-padding;
+
+  h1:first-of-type {
+    margin-top: 0;
+  }
 }
