--- a/src/css/components/_trix.scss
+++ b/src/css/components/_trix.scss
@@ -1,7 +1,11 @@
 trix-toolbar {
+  position: sticky;
+  top: 0px;
+  z-index: 100;
   border-bottom: 1px solid $colour-border-grey;
   margin-bottom: $size-page-padding;
   padding: ($size-page-padding / 2)  0;
+  background: #fff;
 
   .trix-button {
     border: none !important;
